--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
     <button class="game-button" onclick="exitGame()">Exit</button>
   </div>
 
-  <audio id="bg-music" src="background.mp3" loop></audio>
+  <!-- Audio section with updated background music -->
+  <audio id="bg-music" src="https://github.com/Bilalahmad123/FoxWallet-Tower-Defense/blob/aca699763059ca221d6efe6fa38daa48c0f7e8dc/assets/background.mp3?raw=true" loop></audio>
   <audio id="life-lost" src="life-lost.mp3"></audio>
   <audio id="place-tower" src="tower-place.mp3"></audio>
   <audio id="tower-upgrade" src="tower-upgrade.mp3"></audio>
